ci: disable Linaro CI on master branch
When combining meta-qcom and meta-qcom-hwe, we inherit from both CI
workflows. Moving forward we want to run the following workflows:

* Linaro CI for all stable branch up until styhead
* Qualcomm CI for master/main and future stable branches

With this change we disable all Linaro CI on master (nightly, push,
PR).

Signed-off-by: Nicolas Dechesne <nicolas.dechesne@oss.qualcomm.com>

--- a/.github/workflows/premerge.yml
+++ b/.github/workflows/premerge.yml
@@ -2,6 +2,11 @@ name: PR build
 
 on:
   pull_request_target:
+    branches:
+      - 'styhead'
+      - 'scarthgap'
+      - 'kirkstone'
+      - 'dunfell'
 
 jobs:
   build:
